validates TF resource values like cpu, memory, stack_type against openapi spec generated values (#53)
